--- a/Projeto-receita/index.html
+++ b/Projeto-receita/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina de Receita</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="page">
         <main>
-            <img src="" alt="">
+            <img src="assets/main-image.jpg" alt="Cupcake com graos de cafe e um chantilly">
             <section id="about"></section>
             <h1>Cupcake de café com chantilly</h1>
             <p>O bolinho perfeito para acompanhar o café de todos os dias. É muito fácil e ainda por cima fica maravilhoso, com certeza vai impressionar. Faz e depois me conta o que achou!</p>
