--- a/Classroom/index.html
+++ b/Classroom/index.html
@@ -10,6 +10,6 @@
     <!-- deixa o script no final da pag para carregas após o html e css-->
    <!-- <script src="basico.js"></script> -->
     <!-- <script src= "scopo.js"></script> -->
-    <script src="condicionais e controles.js"></script>
+    <script src="expresoesoperadores.js"></script>
 </body>
 </html>
