--- a/Classroom/index.html
+++ b/Classroom/index.html
@@ -11,6 +11,6 @@
    <!-- <script src="basico.js"></script> -->
     <!-- <script src= "scopo.js"></script> -->
 
-    <script src="funções.js"></script>
+    <script src="Document Object Model.js"></script>
 </body>
 </html>
